--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "babelify": "^7.2.0",
     "browser-sync": "^2.10.1",
     "browserify": "^12.0.1",
+    "del": "^2.2.0",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
+    "gulp-filelist": "^0.2.0",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-ruby-sass": "^2.0.6",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
